# desarrollo-proyectos-neumonia

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md
.devcontainer/: README.md  devcontainer.json  post-create.sh
detector-neumonia-uv/: README.md  main.py  pyproject.toml
detector-neumonia-uv/src/: console_app.py  grad_cam.py  gui_app.py  integrator.py  load_model.py  main.py  predictor.py  preprocess_img.py  read_img.py
detector-neumonia-uv/tests/: conftest.py  test_preprocess_img.py  test_read_img.py
