[project]
name = "detector-neumonia-uv"
version = "0.1.0"
description = "Refactor from https://github.com/dalquinones/UAO-Neumonia"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyautogui>=0.9.54",
    "pillow>=10.0.0",
    "tkcap>=0.0.4",
    "pydicom>=2.4.0",
    "img2pdf>=0.5.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "tensorflow>=2.13.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["detector_neumonia_uv"]  # Ajusta según tu estructura